@@ -6,54 +6,84 @@ using Microsoft.Win32.SafeHandles;
 
 namespace pylorak.Windows.Services
 {
-    public sealed class SafeHandleAllocHGlobal : SafeHandleZeroOrMinusOneIsInvalid
+    public sealed class SafeHGlobalHandle : SafeHandleZeroOrMinusOneIsInvalid
     {
         [SuppressUnmanagedCodeSecurity]
         private static class NativeMethods
         {
-            [DllImport("kernel32.dll")]
-            public static extern SafeHandleAllocHGlobal GlobalAlloc(uint uFlags, UIntPtr dwBytes);
+            [DllImport("kernel32")]
+            public static extern IntPtr GlobalAlloc(uint uFlags, UIntPtr dwBytes);
 
-            [DllImport("kernel32.dll")]
-            [ReliabilityContract(Consistency.WillNotCorruptState, Cer.MayFail)]
+            [DllImport("kernel32")]
             public static extern IntPtr GlobalFree(IntPtr hMem);
         }
 
-        public static SafeHandleAllocHGlobal Alloc(uint nBytes, bool zeroInit = false)
+        private static IntPtr AllocNativeMem(uint nBytes, bool zeroInit = false)
         {
             const uint GMEM_ZEROINIT = 0x0040;
             return NativeMethods.GlobalAlloc(zeroInit ? GMEM_ZEROINIT : 0, new UIntPtr(nBytes));
         }
-        public static SafeHandleAllocHGlobal Alloc(int nBytes, bool zeroInit = false)
+
+        public static SafeHGlobalHandle Alloc(uint nBytes, bool zeroInit = false)
+        {
+            return new SafeHGlobalHandle(AllocNativeMem(nBytes, zeroInit));
+        }
+
+        public static SafeHGlobalHandle Alloc(int nBytes, bool zeroInit = false)
         {
             return Alloc((uint)nBytes, zeroInit);
         }
-        public static SafeHandleAllocHGlobal FromString(string? str)
+
+        public static SafeHGlobalHandle FromString(string? str)
         {
             return (str == null)
-                ? new SafeHandleAllocHGlobal()
-                : new SafeHandleAllocHGlobal(Marshal.StringToHGlobalUni(str));
+                ? new SafeHGlobalHandle()
+                : new SafeHGlobalHandle(Marshal.StringToHGlobalUni(str));
         }
 
-        public static SafeHandleAllocHGlobal FromStruct<T>(T obj)
+        public static SafeHGlobalHandle FromStruct<T>(T obj) where T : unmanaged
         {
             var size = Marshal.SizeOf(typeof(T));
             var ret = Alloc(size, true);
-            Marshal.StructureToPtr(obj, ret.DangerousGetHandle(), false);
+            Marshal.StructureToPtr(obj, ret.handle, false);
             return ret;
         }
 
-        public SafeHandleAllocHGlobal()
+        public void MarshalFromStruct<T>(T obj, int offset = 0) where T : unmanaged
+        {
+            Marshal.StructureToPtr(obj, (IntPtr)(this.handle.ToInt64() + offset), false);  // TODO: Use IntPtr.Add() on .Net4
+        }
+
+        public T ToStruct<T>() where T : unmanaged
+        {
+            return (T)Marshal.PtrToStructure(this.handle, typeof(T));
+        }
+
+        public void ForgetAndResize(uint newSize, bool zeroInit = false)
+        {
+            if (this.IsClosed)
+                throw new InvalidOperationException("The SafeHandle is already closed.");
+
+            var newHndl = AllocNativeMem(newSize, zeroInit);
+            if (newHndl == IntPtr.Zero)
+                throw new System.ComponentModel.Win32Exception();
+
+            if (!this.IsInvalid)
+                NativeMethods.GlobalFree(this.handle);
+
+            SetHandle(newHndl);
+        }
+
+        public SafeHGlobalHandle()
             : this(IntPtr.Zero)
         { }
 
-        public SafeHandleAllocHGlobal(IntPtr ptr)
+        public SafeHGlobalHandle(IntPtr ptr)
             : base(true)
         {
             SetHandle(ptr);
         }
 
-        [ReliabilityContract(Consistency.WillNotCorruptState, Cer.MayFail)]
         protected override bool ReleaseHandle()
         {
             return (IntPtr.Zero == NativeMethods.GlobalFree(handle));
@@ -148,7 +178,7 @@ namespace pylorak.Windows.Services
             filter.ClassGuid = devIfaceClsGuid;
             filter.Name = 0;
             filter.Reserved = 0;
-            using var filter_hndl = SafeHandleAllocHGlobal.FromStruct(filter);
+            using var filter_hndl = SafeHGlobalHandle.FromStruct(filter);
 
             return NativeMethods.RegisterDeviceNotification(recipient, filter_hndl.DangerousGetHandle(), flags);
         }
