@@ -5,6 +5,7 @@ TinyWall Changelog
 - Add support for encrypted DNS in Windows 11
 - Add support for whitelisting volumes mounted to mount points
 - Add workaround for ImDisk issue
+- Fix memory leak when changing service failure action
 - Fix Connections list not sorted by timestamp by default (3.1.1 regression)
 - Fix possible null-dereference with VeraCrypt volumes
 - Update Japanese and Portuguese localizations
